--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     margin: 0;
   }
 
+  .image-gallery{
+    width: 80%;
+    margin: 0 auto;
+  }
+
 .preview {
     display: flex;
     justify-content: flex-start;
